--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\..\src\drag2d;&quot;..\..\..\..\editor-external&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\giflib\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\libjpeg\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\list&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\md5\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;;&quot;..\..\..\..\editor-external\soil\include&quot;;&quot;..\..\..\..\editor-external\triangle\include&quot;;&quot;..\..\..\..\editor-external\wx\include&quot;;..\..\..\..\easyimage\src"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -109,7 +109,7 @@
 				InlineFunctionExpansion="0"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="..\..\..\src\drag2d;..\..\..\..\editor-external;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\freetype\include;..\..\..\..\editor-external\giflib\include;..\..\..\..\editor-external\gl\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\libjpeg\include;..\..\..\..\editor-external\libpng\include;..\..\..\..\editor-external\list;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\md5\include;..\..\..\..\editor-external\rapidxml\include;..\..\..\..\editor-external\soil\include;..\..\..\..\editor-external\triangle\include;..\..\..\..\editor-external\wx\include;..\..\..\..\easyimage\src"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
