--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../../src;../../../external/tools;../../../external/rg_etc1;../../../external/dtex;&quot;../../../../editor-external/cjson/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/pthread/include&quot;;&quot;../../../../editor-external/c99&quot;;&quot;../../../../editor-external/gl/include&quot;;../../../../editor-external/libpng/include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -108,7 +108,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="../../../src;../../../external/tools;../../../external/rg_etc1;../../../external/dtex;&quot;../../../../editor-external/cjson/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/pthread/include&quot;;&quot;../../../../editor-external/c99&quot;;&quot;../../../../editor-external/gl/include&quot;;../../../../editor-external/libpng/include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
