[ADDED] path quadtree
Former-commit-id: 654074045b187a28674cb26e3e89ec7bce4fa827

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -397,6 +397,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\lr\preview\PathQuadtree.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\preview\PathQuadtree.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\lr\preview\PathUtil.cpp"
 					>
 				</File>
