--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -542,6 +542,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\LRToComplex.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\LRToComplex.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\RemoveDuplicateSprite.cpp"
 					>
 				</File>
