[CHANGED] 重构NodeCaptureCMPT，变成通用的结构
Former-commit-id: 6e3b9e7128e049b8ef4138a49ba7aac5418e6375

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2189,6 +2189,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="value"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\OneFloatValue.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\OneFloatValueCMPT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\OneFloatValueCMPT.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\OneFloatValueStatic.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="algorithms"
