[ADDED] layer for lr
Former-commit-id: 2605dadc1d4ab245c8fd53b54cc41a2ed4cb79e9

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -306,6 +306,14 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\lr\dataset\Layer.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\dataset\Layer.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\lr\dataset\Quadtree.cpp"
 				>
 			</File>
