--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -565,6 +565,14 @@
 					RelativePath="..\..\..\src\easydb\ScaleJson.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="preprocess"
