[FIXED] LRToComplex改成新格式
Former-commit-id: 05f370a8f8a4bd8bf8021f0ba884a80293077ff0

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -542,14 +542,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\easydb_cl\LRToComplex.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easydb_cl\LRToComplex.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\easydb_cl\RemoveDuplicateSprite.cpp"
 					>
 				</File>
@@ -565,14 +557,26 @@
 					RelativePath="..\..\..\src\easydb\ScaleJson.h"
 					>
 				</File>
-				<File
-					RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.cpp"
+				<Filter
+					Name="lr"
 					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.h"
-					>
-				</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRToComplex.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRToComplex.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="preprocess"
