--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -569,6 +569,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\LRToShapeTable.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRToShapeTable.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\TransOldLRFile.cpp"
 						>
 					</File>
