[ADDED] 鼠标右键弹出菜单中改symbol
Former-commit-id: 29fd87081a3de4b3d433672e7d2a452e50d79690

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -245,6 +245,14 @@
 				Name="stage"
 				>
 				<File
+					RelativePath="..\..\..\src\lr\view\RightPopupMenu.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\RightPopupMenu.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\lr\view\StageCanvas.cpp"
 					>
 				</File>
@@ -284,6 +292,14 @@
 			<Filter
 				Name="editop"
 				>
+				<File
+					RelativePath="..\..\..\src\lr\view\ArrangeSpriteImpl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\view\ArrangeSpriteImpl.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\lr\view\PasteSymbolOP.cpp"
 					>
