--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -322,6 +322,22 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\lr\dataset\CharacterAllDirections.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\dataset\CharacterAllDirections.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\dataset\CharacterFileName.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\lr\dataset\CharacterFileName.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\lr\dataset\Grids.cpp"
 				>
 			</File>
