[ADDED] terrain2d to lr
Former-commit-id: d54cbaf3a43f7b5a1a85a604e908dbef6ccff9f7

--- a/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
+++ b/easyterrain2d/platform/msvc2008/projects/libterrain2d.vcproj
@@ -321,6 +321,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="frame"
+			>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\EditDialog.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libterrain2d\EditDialog.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libterrain2d\config.h"
 			>
