--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -301,19 +301,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libimage\ImageRevertY.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libimage\ImageRevertY.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\libimage\ImageTrim.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\src\libimage\ImageTrim.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageVeritalFlip.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageVeritalFlip.h"
 				>
 			</File>
 		</Filter>
