[ADDED] group tree panel
Former-commit-id: f7d2b8a9a9cfc2befc9a52df48c963ee76e383de

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2056,6 +2056,14 @@
 					RelativePath="..\..\..\src\drag2d\view\GroupTreeCtrl.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreePanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreePanel.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
