[ADDED] draw curve 按shift时画直线
Former-commit-id: 277356c8698f82dec8318cfb1f43211bc0b57d24

--- a/easyshape/platform/msvc2008/projects/libshape.vcproj
+++ b/easyshape/platform/msvc2008/projects/libshape.vcproj
@@ -643,6 +643,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\libshape\DrawLineUtility.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libshape\DrawLineUtility.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\libshape\DrawPencilLineCMPT.cpp"
 						>
 					</File>
