[ADDED] store group tree
Former-commit-id: 270e4f37b970b913aba5055fe92e5e70477daee6

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2057,11 +2057,31 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeImpl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeImpl.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeItem.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeItem.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\GroupTreePanel.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\view\GroupTreePanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeVisitor.h"
 					>
 				</File>
 			</Filter>
