[ADDED] io for group tree in ecomplex
Former-commit-id: 1d19902dd5bbcb50e290c788cae2d14358b097f2

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2065,6 +2065,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeIO.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\GroupTreeIO.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\GroupTreeItem.cpp"
 					>
 				</File>
