add copy & paste for KeyFrames
Former-commit-id: ea9eb56c966e4d4c2fd8c0ca3d239eddb78ab09d

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -431,6 +431,14 @@
 					Name="keyframes"
 					>
 					<File
+						RelativePath="..\..\..\src\easyanimation\view\KeysContentEdit.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easyanimation\view\KeysContentEdit.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easyanimation\view\KeysContentWidget.cpp"
 						>
 					</File>
