[ADDED] 重构libanim Tools
Former-commit-id: d79f84ef8a5a2d66eba8ea656e7f552aff04220c

--- a/easyanim/platform/msvc2008/projects/libanim.vcproj
+++ b/easyanim/platform/msvc2008/projects/libanim.vcproj
@@ -182,14 +182,22 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="tools"
+			Name="utility"
 			>
 			<File
-				RelativePath="..\..\..\src\libanim\Tools.cpp"
+				RelativePath="..\..\..\src\libanim\TweenUtility.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\libanim\Tools.h"
+				RelativePath="..\..\..\src\libanim\TweenUtility.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libanim\Utility.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libanim\Utility.h"
 				>
 			</File>
 		</Filter>
